--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css"> -->
   <script src="https://kit.fontawesome.com/1fc99350dd.js" crossorigin="anonymous"></script>
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>React App</title>
+  <title>Eugene Revutskiy</title>
 </head>
 
 <body>
   <div id="root"></div>
-
 </body>
 
 </html>
