--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Potfolio" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/trianglify/2.0.0/trianglify.min.js"></script>
+  <script src="http://d3js.org/d3.v3.min.js"></script>
   <title>Eugene Revutskiy</title>
 </head>
 
